<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, RemoteControlActivity!</string>
    <string name="app_name">RemoteControl</string>
    <string name="previous">&lt;&lt;</string>
    <string name="next">>></string>
    <string name="play">Play</string>
    <string name="forward">></string>
    <string name="backwards">&lt;</string>
    <string name="playlist">Playlist</string>
    <string name="trackListActivityName">TrackListActivity</string>
    <string name="connect">Connect</string>
    <string name="defaultIP">192.168.1.xx</string>
    <string name="port">4242</string>
    <string name="noTrackName">Nothing playing</string>
    <string name="unknownArtist">Unknown artist</string>
    <string name="empty"></string>
    <string name="connect_table_layout_ip_label">Ip adress</string>
    <string name="connect_table_layout_port_label">Port</string>
    <string name="autoDetectServer">Auto Detect Server</string>
    <string name="autoDetectedServers">Auto Detected Servers</string>
    <string name="successfulConnections">Successful Connections History</string>

</resources>