<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >


        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="1"
            android:gravity="center_horizontal" >
            <TableRow >

                <TextView
                    android:padding="3dip"
                    android:text="@string/connect_table_layout_ip_label" />

                <EditText
                    android:id="@+id/ipAdressTextEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </TableRow>

            <TableRow >

                <TextView
                    android:padding="3dip"
                    android:text="@string/connect_table_layout_port_label" />

                <EditText
                    android:id="@+id/portTextEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/port">
                </EditText>
            </TableRow>

            <Button
                android:id="@+id/connectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect" />

            <Button
                android:id="@+id/autoDetectServerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autoDetectServer" />

            <TextView
                android:id="@+id/autoDetectedServerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/autoDetectedServers"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ListView
                android:id="@+id/ipAutoListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible" >
            </ListView>

            <TextView
                android:id="@+id/sucessfulConnectionsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/successfulConnections"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ListView
                android:id="@+id/ipListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="visible" >
            </ListView>

        </TableLayout>
   
</LinearLayout>